# monosend-comment

./: .gitignore  Dockerfile  LICENSE  README.md  example.env  lambda.Dockerfile  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
src/: lambda.py  main.py  settings.py
src/operations/: process.py
src/translations/: en.py  translate.py  ua.py
